fix: butler only executes on geekazodium

--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -73,6 +73,7 @@ jobs:
       BUTLER_API_KEY: ${{ secrets.BUTLER_API_KEY }}
       ITCH_USER: ${{ secrets.ITCH_USER }}
       ITCH_GAME: ${{ secrets.ITCH_GAME }}
+    if: ${{ (github.repository_owner) == 'geekazodium'}} 
     needs:
       export-web
     steps: 
